# ircbot

./: .env.example  .gitignore  BUGFIX.md  IMPLEMENTATION_SUMMARY.txt  README.md  WEB_INTERFACE.md  app.py  async_dcc_bot.py  auth.py  bot_manager.py  config.py  ircbot.service  models.py  parser.py  pyproject.toml  quickstart.sh  run.sh  start.sh  test_imports.py
.opencode/plans/: irc-book-bot.md
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  dcc.py  irc_bot.py  main.py  models.py  nickgen.py  proxy.py
backend/app/routes/: admin.py  auth.py  books.py  search.py
deploy/: ircbot.service  setup.sh  update.sh
downloads/: SearchBot_results_for_ enders game.txt
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AdminPage.tsx  LibraryPage.tsx  LoginPage.tsx  SearchPage.tsx  StatusBar.tsx
frontend/src/hooks/: useSearchPoll.ts
instance/: database.db
static/css/: style.css
static/js/: library.js  search.js  socket.js
templates/: base.html  library.html  login.html  search.html
