[project]
name = "ircbot"
version = "0.1.0"
description = "IRC Book Downloader Web Interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.3.5",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "python-socketio>=5.10.0",
    "python-engineio>=4.8.0",
    "werkzeug>=3.0.1",
    "irc>=20.5.0",
    "gunicorn>=25.1.0",
    "eventlet>=0.37.0",
]
